--- a/SoftwareBook/Pages/BookList/Index.cshtml
+++ b/SoftwareBook/Pages/BookList/Index.cshtml
@@ -20,10 +20,11 @@
                         </th>
                         <th>
                             <label asp-for="Books.FirstOrDefault().Author"></label>
+                            
                             @*@Html.DisplayNameFor(m => m.Books.FirstOrDefault().Author)*@
                         </th>
                         <th>
-
+                            <label asp-for="Books.FirstOrDefault().ISBN"></label>
                         </th>
                     </tr>
                     @foreach (var item in Model.Books)
@@ -37,7 +38,7 @@
                             </td>
                             <td>
                                 <button class="btn btn-danger btn-sm">Delete</button>
-                                <a class="btn btn-success btn-sm text-white">Edit</a>
+                                <a asp-page="Edit" asp-route-id="@item.Id" class="btn btn-success btn-sm text-white">Edit</a>
                             </td>
                         </tr>
                     }
