--- a/SoftwareBook/Pages/BookList/Index.cshtml
+++ b/SoftwareBook/Pages/BookList/Index.cshtml
@@ -20,7 +20,7 @@
                         </th>
                         <th>
                             <label asp-for="Books.FirstOrDefault().Author"></label>
-                            
+
                             @*@Html.DisplayNameFor(m => m.Books.FirstOrDefault().Author)*@
                         </th>
                         <th>
@@ -36,7 +36,7 @@
                             <td>
                                 @Html.DisplayFor(m => item.Author)
                             </td>
-                                                        <td>
+                            <td>
                                 @Html.DisplayFor(m => item.ISBN)
                             </td>
                             <td>
@@ -53,4 +53,26 @@
             }
         </form>
     </div>
+    <div class="col-12" style="text-align:center">
+        <br />
+        <span class="h3 text-info">OR</span>
+        <br /><br />
+    </div>
+    <div class="col-12 border p-3">
+
+        <table id="DT_load" class="table table-striped table-bordered" style="width:100%">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th> Author</th>
+                    <th> ISBN</th>
+                    <th></th>
+                </tr>
+            </thead>
+        </table>
+    </div>
 </div>
+
+@section Scripts {
+    <script src="~/js/bookList.js"></script>
+}
